# pet_project_fastapi

./: .env
backend/: .dockerignore  .env  docker-compose.yml  pyproject.toml
backend/src/: constants.py  core.py  main.py
backend/src/api/: crud.py  models.py  shortcuts.py  validators.py  views.py  websockets.py
backend/src/db/: client.py  utils.py
backend/src/pet_project/: settings.py
backend/tests/: test_core.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: constants.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/games/[id]/: page.tsx
frontend/src/app/games/[id]/join/: page.tsx
frontend/src/components/: buttons.tsx  input.tsx
frontend/src/utils/: localStorage.tsx
